// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`smithyProjectGenerator > shape libraries > should generate a shape library without a service > shapes-main.smithy 1`] = `
"$version: "2.0"

namespace proj

/// TODO: define the shapes you would like to share between your Smithy projects
structure ExampleShape {
    @required
    id: String

    description: String
}
"
`;

exports[`smithyProjectGenerator > shape libraries > should generate a shape library without a service > shapes-project.json 1`] = `
"{
  "name": "@proj/test-shapes",
  "$schema": "../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "test-shapes/src",
  "projectType": "library",
  "metadata": {
    "generator": "smithy#project",
    "smithyType": "shapes",
    "namespace": "proj"
  },
  "targets": {
    "build": {
      "dependsOn": ["compile"]
    },
    "compile": {
      "cache": true,
      "outputs": ["{workspaceRoot}/dist/{projectRoot}/build"],
      "executor": "nx:run-commands",
      "options": {
        "commands": [
          "rimraf dist/{projectRoot}/build",
          "rimraf dist/{projectRoot}/smithy",
          "make-dir dist/{projectRoot}/build",
          "node_modules/mise/bin/mise exec smithy@1.72.1 -- smithy build -c {projectRoot}/smithy-build.json --output dist/{projectRoot}/smithy",
          "ncp dist/{projectRoot}/smithy/source/model/model.json dist/{projectRoot}/build/model.json"
        ],
        "parallel": false,
        "cwd": "{workspaceRoot}"
      }
    }
  }
}
"
`;

exports[`smithyProjectGenerator > shape libraries > should generate a shape library without a service > shapes-smithy-build.json 1`] = `
"{
  "version": "1.0",
  "sources": ["src/"],
  "maven": {
    "dependencies": ["software.amazon.smithy:smithy-model:1.72.1"]
  }
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with all custom options > all-custom-main.smithy 1`] = `
"$version: "2.0"

namespace com.mycompany.api

use aws.protocols#restJson1
use smithy.framework#ValidationException

/// TODO: describe your service here
@title("MyCustomService")
@restJson1
service MyCustomService {
    version: "1.0.0"
    operations: [
        Echo
    ]
    errors: [
        ValidationException
    ]
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with all custom options > all-custom-project.json 1`] = `
"{
  "name": "@proj/test-api",
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "backend/model/src",
  "projectType": "library",
  "metadata": {
    "generator": "smithy#project",
    "smithyType": "service",
    "namespace": "com.mycompany.api",
    "apiName": "test-api"
  },
  "targets": {
    "build": {
      "dependsOn": ["compile"]
    },
    "compile": {
      "cache": true,
      "outputs": ["{workspaceRoot}/dist/{projectRoot}/build"],
      "executor": "nx:run-commands",
      "options": {
        "commands": [
          "rimraf dist/{projectRoot}/build",
          "rimraf dist/{projectRoot}/smithy",
          "make-dir dist/{projectRoot}/build",
          "node_modules/mise/bin/mise exec smithy@1.72.1 -- smithy build -c {projectRoot}/smithy-build.json --output dist/{projectRoot}/smithy",
          "cpy \\"dist/{projectRoot}/smithy/source/openapi/*.openapi.json\\" dist/{projectRoot}/build/openapi --flat --rename=openapi.json",
          "npm install --prefix dist/{projectRoot}/smithy/source/typescript-ssdk-codegen --ignore-scripts --no-audit --no-fund",
          "rolldown -c {projectRoot}/ssdk.rolldown.config.mjs"
        ],
        "parallel": false,
        "cwd": "{workspaceRoot}"
      }
    }
  }
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with custom directory > custom-dir-project.json 1`] = `
"{
  "name": "@proj/test-api",
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "apis/test-api/src",
  "projectType": "library",
  "metadata": {
    "generator": "smithy#project",
    "smithyType": "service",
    "namespace": "proj",
    "apiName": "test-api"
  },
  "targets": {
    "build": {
      "dependsOn": ["compile"]
    },
    "compile": {
      "cache": true,
      "outputs": ["{workspaceRoot}/dist/{projectRoot}/build"],
      "executor": "nx:run-commands",
      "options": {
        "commands": [
          "rimraf dist/{projectRoot}/build",
          "rimraf dist/{projectRoot}/smithy",
          "make-dir dist/{projectRoot}/build",
          "node_modules/mise/bin/mise exec smithy@1.72.1 -- smithy build -c {projectRoot}/smithy-build.json --output dist/{projectRoot}/smithy",
          "cpy \\"dist/{projectRoot}/smithy/source/openapi/*.openapi.json\\" dist/{projectRoot}/build/openapi --flat --rename=openapi.json",
          "npm install --prefix dist/{projectRoot}/smithy/source/typescript-ssdk-codegen --ignore-scripts --no-audit --no-fund",
          "rolldown -c {projectRoot}/ssdk.rolldown.config.mjs"
        ],
        "parallel": false,
        "cwd": "{workspaceRoot}"
      }
    }
  }
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with custom namespace > custom-namespace-main.smithy 1`] = `
"$version: "2.0"

namespace com.example.custom

use aws.protocols#restJson1
use smithy.framework#ValidationException

/// TODO: describe your service here
@title("TestApi")
@restJson1
service TestApi {
    version: "1.0.0"
    operations: [
        Echo
    ]
    errors: [
        ValidationException
    ]
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with custom service name > custom-service-main.smithy 1`] = `
"$version: "2.0"

namespace proj

use aws.protocols#restJson1
use smithy.framework#ValidationException

/// TODO: describe your service here
@title("CustomService")
@restJson1
service CustomService {
    version: "1.0.0"
    operations: [
        Echo
    ]
    errors: [
        ValidationException
    ]
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with default options > echo.smithy 1`] = `
"$version: "2.0"

namespace proj

/// An example operation
@http(method: "GET", uri: "/echo")
@readonly
operation Echo {
    input := {
        @httpQuery("message")
        @required
        @length(max: 1024)
        message: String
    }
    output := {
        @required
        message: String
    }
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with default options > main.smithy 1`] = `
"$version: "2.0"

namespace proj

use aws.protocols#restJson1
use smithy.framework#ValidationException

/// TODO: describe your service here
@title("TestApi")
@restJson1
service TestApi {
    version: "1.0.0"
    operations: [
        Echo
    ]
    errors: [
        ValidationException
    ]
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with default options > project.json 1`] = `
"{
  "name": "@proj/test-api",
  "$schema": "../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "test-api/src",
  "projectType": "library",
  "metadata": {
    "generator": "smithy#project",
    "smithyType": "service",
    "namespace": "proj",
    "apiName": "test-api"
  },
  "targets": {
    "build": {
      "dependsOn": ["compile"]
    },
    "compile": {
      "cache": true,
      "outputs": ["{workspaceRoot}/dist/{projectRoot}/build"],
      "executor": "nx:run-commands",
      "options": {
        "commands": [
          "rimraf dist/{projectRoot}/build",
          "rimraf dist/{projectRoot}/smithy",
          "make-dir dist/{projectRoot}/build",
          "node_modules/mise/bin/mise exec smithy@1.72.1 -- smithy build -c {projectRoot}/smithy-build.json --output dist/{projectRoot}/smithy",
          "cpy \\"dist/{projectRoot}/smithy/source/openapi/*.openapi.json\\" dist/{projectRoot}/build/openapi --flat --rename=openapi.json",
          "npm install --prefix dist/{projectRoot}/smithy/source/typescript-ssdk-codegen --ignore-scripts --no-audit --no-fund",
          "rolldown -c {projectRoot}/ssdk.rolldown.config.mjs"
        ],
        "parallel": false,
        "cwd": "{workspaceRoot}"
      }
    }
  }
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with default options > smithy-build.json 1`] = `
"{
  "version": "1.0",
  "sources": ["src/"],
  "plugins": {
    "openapi": {
      "service": "proj#TestApi",
      "version": "3.1.0",
      "tags": true,
      "useIntegerType": true
    },
    "typescript-ssdk-codegen": {
      "package": "@proj/test-api-ssdk",
      "packageVersion": "0.0.1"
    }
  },
  "maven": {
    "dependencies": [
      "software.amazon.smithy:smithy-model:1.72.1",
      "software.amazon.smithy:smithy-aws-traits:1.72.1",
      "software.amazon.smithy:smithy-validation-model:1.72.1",
      "software.amazon.smithy:smithy-openapi:1.72.1",
      "software.amazon.smithy.typescript:smithy-aws-typescript-codegen:0.50.0"
    ]
  }
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with default options > ssdk.rolldown.config.mjs 1`] = `
"import fs from 'node:fs';
import { createRequire } from 'node:module';
import path from 'node:path';
import esmShim from '@rollup/plugin-esm-shim';
import { dts } from 'rolldown-plugin-dts';

/**
 * Paths are handed to rolldown with forward slashes on every platform.
 *
 * A module's identity is its resolved path, and rolldown reaches this project's
 * files two ways: the entry it is given, and the relative imports it follows from
 * there. On Windows \`path.join\` produces backslashes, so an entry spelled that way
 * and an import resolved the other spell the same file differently — it is then
 * loaded twice, and the second copy sees the first's declarations as imports. The
 * generated Server SDK merges an \`interface\` with a \`namespace\`, whose emitted
 * assignment then looks like a write to an import and fails the build with
 * ASSIGN_TO_IMPORT.
 */
const posix = (...segments) =>
  path
    .join(...segments)
    .split(path.sep)
    .join('/');

// The Smithy CLI generates the Server SDK under dist, along with its own
// dependencies, so paths are resolved from there rather than this project.
const ssdkDir = posix(
  import.meta.dirname,
  '../',
  'dist',
  'test-api',
  'smithy/source/typescript-ssdk-codegen',
);
const require = createRequire(path.join(ssdkDir, 'package.json'));

// Bundle the re2-wasm wasm file as part of the module
const re2WasmPlugin = () => ({
  name: 're2-wasm-plugin',
  resolveId: (id) => {
    if (!(id === 're2-wasm' || id.endsWith('/re2-wasm'))) return null;
    try {
      const dir = posix(
        path.dirname(require.resolve('re2-wasm/package.json')),
        'build/wasm',
      );
      return fs.existsSync(path.join(dir, 're2.wasm')) &&
        fs.existsSync(path.join(dir, 're2.js'))
        ? posix(dir, 're2.js')
        : null;
    } catch {
      return null;
    }
  },
  load: (id) => {
    if (!(id.endsWith('re2.js') && id.includes('re2-wasm'))) return null;
    try {
      const wasmPath = path.join(path.dirname(id), 're2.wasm');
      return fs.existsSync(wasmPath) && fs.existsSync(id)
        ? \`var Module = { wasmBinary: Buffer.from("\${fs.readFileSync(wasmPath).toString('base64')}", "base64") }\\n\${fs.readFileSync(id, 'utf8')}\`
        : null;
    } catch {
      return null;
    }
  },
});

export default {
  input: posix(ssdkDir, 'src/index.ts'),
  plugins: [re2WasmPlugin(), dts({ resolve: true }), esmShim()],
  output: [
    {
      dir: posix(import.meta.dirname, '../', 'dist', 'test-api', 'build/ssdk'),
      format: 'es',
    },
  ],
  resolve: { tsconfigFilename: posix(ssdkDir, 'tsconfig.es.json') },
  platform: 'node',
};
"
`;

exports[`smithyProjectGenerator > should generate smithy project with subdirectory > subdir-project.json 1`] = `
"{
  "name": "@proj/test-api",
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "services/model/src",
  "projectType": "library",
  "metadata": {
    "generator": "smithy#project",
    "smithyType": "service",
    "namespace": "proj",
    "apiName": "test-api"
  },
  "targets": {
    "build": {
      "dependsOn": ["compile"]
    },
    "compile": {
      "cache": true,
      "outputs": ["{workspaceRoot}/dist/{projectRoot}/build"],
      "executor": "nx:run-commands",
      "options": {
        "commands": [
          "rimraf dist/{projectRoot}/build",
          "rimraf dist/{projectRoot}/smithy",
          "make-dir dist/{projectRoot}/build",
          "node_modules/mise/bin/mise exec smithy@1.72.1 -- smithy build -c {projectRoot}/smithy-build.json --output dist/{projectRoot}/smithy",
          "cpy \\"dist/{projectRoot}/smithy/source/openapi/*.openapi.json\\" dist/{projectRoot}/build/openapi --flat --rename=openapi.json",
          "npm install --prefix dist/{projectRoot}/smithy/source/typescript-ssdk-codegen --ignore-scripts --no-audit --no-fund",
          "rolldown -c {projectRoot}/ssdk.rolldown.config.mjs"
        ],
        "parallel": false,
        "cwd": "{workspaceRoot}"
      }
    }
  }
}
"
`;

exports[`smithyProjectGenerator > should handle empty service name by using project name > default-service-name-main.smithy 1`] = `
"$version: "2.0"

namespace proj

use aws.protocols#restJson1
use smithy.framework#ValidationException

/// TODO: describe your service here
@title("MyService")
@restJson1
service MyService {
    version: "1.0.0"
    operations: [
        Echo
    ]
    errors: [
        ValidationException
    ]
}
"
`;

exports[`smithyProjectGenerator > should handle kebab-case conversion for service names > kebab-case-main.smithy 1`] = `
"$version: "2.0"

namespace proj

use aws.protocols#restJson1
use smithy.framework#ValidationException

/// TODO: describe your service here
@title("MyTestService")
@restJson1
service MyTestService {
    version: "1.0.0"
    operations: [
        Echo
    ]
    errors: [
        ValidationException
    ]
}
"
`;

exports[`smithyProjectGenerator > should handle kebab-case conversion for service names > kebab-case-smithy-build.json 1`] = `
"{
  "version": "1.0",
  "sources": ["src/"],
  "plugins": {
    "openapi": {
      "service": "proj#MyTestService",
      "version": "3.1.0",
      "tags": true,
      "useIntegerType": true
    },
    "typescript-ssdk-codegen": {
      "package": "@proj/my-test-service-ssdk",
      "packageVersion": "0.0.1"
    }
  },
  "maven": {
    "dependencies": [
      "software.amazon.smithy:smithy-model:1.72.1",
      "software.amazon.smithy:smithy-aws-traits:1.72.1",
      "software.amazon.smithy:smithy-validation-model:1.72.1",
      "software.amazon.smithy:smithy-openapi:1.72.1",
      "software.amazon.smithy.typescript:smithy-aws-typescript-codegen:0.50.0"
    ]
  }
}
"
`;

exports[`smithyProjectGenerator > should use npm scope for default namespace > npm-scope-main.smithy 1`] = `
"$version: "2.0"

namespace myorg

use aws.protocols#restJson1
use smithy.framework#ValidationException

/// TODO: describe your service here
@title("TestApi")
@restJson1
service TestApi {
    version: "1.0.0"
    operations: [
        Echo
    ]
    errors: [
        ValidationException
    ]
}
"
`;
